# flickr-image-captioning

./: .gitattributes  .gitignore  README.md  pyproject.toml
artifacts/attention/: README.md  best_attention.pt  bleu_scores.json  sample_predictions.csv  training_history.csv
artifacts/baseline/: README.md  best_baseline.pt  bleu_scores.json  sample_predictions.csv  training_history.csv
artifacts/resnet_attention/: README.md  best_resnet_attention.pt  bleu_scores.json  run_metadata.json  sample_predictions.csv  training_history.csv
configs/: default.yaml
docs/: assignment_summary.md
notebooks/: flickr8k_attention_kaggle.ipynb  flickr8k_baseline_kaggle.ipynb  flickr8k_image_captioning_project.ipynb  flickr8k_resnet_attention_kaggle.ipynb
notebooks/archive/: Deep Learning - Assignment 3 - 2025.ipynb
scripts/: build_improvement_notebook.py
src/flickr_captioning/: __init__.py  cli.py  config.py  data.py  evaluation.py  inference.py  models.py  text.py  train.py  utils.py
tests/: test_text.py
