[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flickr-image-captioning"
version = "0.1.0"
description = "PyTorch image captioning project for Flickr8k using CNN-LSTM and attention models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pillow>=10.0",
    "PyYAML>=6.0",
    "torch>=2.1",
    "torchvision>=0.16",
    "tqdm>=4.66",
    "nltk>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
flickr-caption = "flickr_captioning.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
